// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render an empty OptionsList 1`] = `
<div
  className="OptionsList"
>
  <div
    className=""
    key=".0"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`should render an option with the search as input if optionList has typedOption prop and empty 1`] = `
<div
  className="OptionsList"
>
  <ForwardRef(DropdownOption)
    className=""
    key="test"
    label="test"
    onClick={[Function]}
    onMouseDown={[Function]}
    value="test"
  >
    <span
      key="0"
    />
    <span
      className="textBold"
      key="1"
    >
      test
    </span>
    <span
      key="2"
    />
  </ForwardRef(DropdownOption)>
</div>
`;

exports[`should render has more info message if specified 1`] = `
<div
  className="OptionsList"
>
  <div
    className=""
    key=".0"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <ForwardRef(DropdownOption)
    className="message"
  >
    Displaying 1 results only. Search to refine.
  </ForwardRef(DropdownOption)>
</div>
`;
